league.org.uk (archived on 2009-06-14)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;entertainment",
  "char_count": 2874,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.39,
  "homepage_snapshot_redirected_domain": "league.org.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090410023641id_/http://www.league.org.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090410023641id_/http%3A//league.org.uk",
  "interval": "2009_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "league.org.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090614001613id_/http%3A//www.league.org.uk/content.asp%3FCategoryID%3D1621",
  "policy_title": "League Against Cruel Sports : Privacy policy",
  "policy_url": "league.org.uk/content.asp?CategoryID=1621",
  "sha1": "f8090658dfd7a4c00b0f8755bb70cfb95226a8b9",
  "simhash": 5864737531400271952,
  "simhash_updated": false,
  "site_hostname": "league.org.uk",
  "site_url": "http://league.org.uk",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090614001613",
  "word_count": 464,
  "year": 2009
}

--- a/l/le/lea/league.org.uk.html
+++ b/l/le/lea/league.org.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the league.org.uk privacy policy that was archived on 2008-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081224220446id_/http%3A//www.league.org.uk/content.asp%3FCategoryID%3D1621) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the league.org.uk privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614001613id_/http%3A//www.league.org.uk/content.asp%3FCategoryID%3D1621) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>League Against Cruel Sports : Privacy policy</title>
@@ -23,7 +23,9 @@ function MM_findObj(n, d) { //v4.01
 <link href="/styles/lacs_print.css" type="text/css" rel="stylesheet" media="print">
 <link href="/styles/lacs_basic.css" type="text/css" rel="stylesheet" media="screen">
 <style type="text/css" media="screen">
-img {display:none}
+@import "/styles/lacs_common.css";
+@import "/styles/lacs_content.css";
+
 </style>
 
 <link rel="alternate stylesheet" type="text/css" media="screen,print" href="/styles/textsize/wnSm.css" title="Small Text">
@@ -80,10 +82,10 @@ setStyle();
 
 <p id="skipnavlink"><strong>[ <a href="#content">skip navigation</a> | <a href="/text.asp?ref=%2Fcontent%2Easp%3FCategoryID%3D1621">graphics version</a> ]</strong></p>
 <p class="hdn"><strong>League Against Cruel Sports</strong> / www.league.org.uk
-		</p><div id="logo"><a href="/index.asp">&nbsp;<strong class="hidden">LACS</strong></a></div><div id="header"><div id="animals-background"></div><div id="sitelinks"><ul><li><a href="/content.asp?CategoryID=1261">Contact us</a><span class="hdn">|</span></li><li><a href="/content.asp?CategoryID=1566">Jobs</a><span class="hdn">|</span></li><li class="last"><a href="/sitemap.asp">Site map</a></li></ul></div><div id="quicksearch"><form action="/search.asp" method="get" style="margin:0"><div><label for="quicksearch-query" class="hdn"></label><input id="quicksearch-query" type="text" value="Enter Keyword" name="q"><input id="quick-search-b" type="submit" value="Search" border="0"><input type="hidden" name="submitted" value="-1"></div></form></div><div id="masternav"><ul><li><a href="/index.asp">Home</a></li><li><a href="/content.asp?CategoryID=1810" class="">Support Us</a></li><li><a href="/content.asp?CategoryID=1236" class="">Campaigns</a></li><li><a href="/content.asp?CategoryID=1501" class="">Get Active</a></li><li><a href="/content.asp?CategoryID=1495" class="">Education</a></li><li><a href="/content.asp?CategoryID=1229" class="current">About us</a></li><li><a href="/news.asp?" class="">Newsroom</a></li></ul></div></div><div id="crumbtrail">
+		</p><div id="logo"><a href="/index.asp">&nbsp;<strong class="hidden">LACS</strong></a></div><div id="header"><div id="animals-background"></div><div id="sitelinks"><ul><li><a href="/content.asp?CategoryID=1261">Contact us</a><span class="hdn">|</span></li><li><a href="/content.asp?CategoryID=1566">Jobs</a><span class="hdn">|</span></li><li><a href="/content.asp?CategoryID=1854">Volunteer</a><span class="hdn">|</span></li><li class="last"><a href="/sitemap.asp">Site map</a></li></ul></div><div id="quicksearch"><form action="/search.asp" method="get" style="margin:0"><div><label for="quicksearch-query" class="hdn"></label><input id="quicksearch-query" type="text" value="Enter Keyword" name="q"><input id="quick-search-b" type="submit" value="Search" border="0"><input type="hidden" name="submitted" value="-1"></div></form></div><div id="masternav"><ul><li><a href="/index.asp">Home</a></li><li><a href="/content.asp?CategoryID=1229" class="current">What We Do</a></li><li><a href="/content.asp?CategoryID=1810" class="">What You Can Do</a></li><li><a href="/content.asp?CategoryID=1236" class="">Campaigns</a></li><li><a href="/news.asp?" class="">Newsroom</a></li></ul></div></div><div id="crumbtrail">
 	<p class="s1">
 		<strong>You are here:</strong>
-		<a href="/">Home</a> &gt; <a href="/content.asp?CategoryID=1229">About us</a> &gt; Privacy policy
+		<a href="/">Home</a> &gt; <a href="/content.asp?CategoryID=1229">What We Do</a> &gt; <a href="/content.asp?CategoryID=2164">About this website</a> &gt; Privacy policy
 	</p>
 </div>
 
@@ -91,7 +93,7 @@ setStyle();
 <div id="sideleft" class="s1">
 
 <div class="subnav">
-	<ul><li><a href="/content.asp?CategoryID=1261"><span>Contact us</span></a></li><li><a href="/content.asp?CategoryID=1959"><span>International Conference, 18 September 2007</span></a></li><li><a href="/content.asp?CategoryID=1611"><span>Structure of the League</span></a></li><li><a href="/content.asp?CategoryID=1841"><span>The Charity</span></a></li><li><a href="/content.asp?CategoryID=1566"><span>Recruitment</span></a></li><li><a href="/content.asp?CategoryID=1854"><span>Volunteers</span></a></li><li><a href="/content.asp?CategoryID=1635"><span>History</span></a></li><li><a href="/content.asp?CategoryID=1618"><span>Sanctuaries</span></a></li><li><a href="/content.asp?CategoryID=1608"><span>League Policy</span></a></li><li><a href="/content.asp?CategoryID=1609"><span>Consultation Responses</span></a></li><li><span class="current"><span>Privacy policy</span></span></li><li><a href="/content.asp?CategoryID=1622"><span>Disclaimer</span></a></li><li><a href="/content.asp?CategoryID=1867"><span>Accessibility</span></a></li></ul>
+	<ul><li><a href="/content.asp?CategoryID=1841"><span>Charity Governance</span></a></li><li><a href="/content.asp?CategoryID=1635"><span>History</span></a></li><li><a href="/content.asp?CategoryID=1618"><span>Sanctuaries</span></a><ul><li><span class="current"><span>Privacy policy</span></span></li><li><a href="/content.asp?CategoryID=1622"><span>Disclaimer</span></a></li><li><a href="/content.asp?CategoryID=1867"><span>Accessibility</span></a></li></ul></li></ul>
 </div>
 <div class="banners" id="banners1">
 
@@ -100,7 +102,7 @@ setStyle();
 </div>
 
 <div id="sideright" class="s1">
-<div class="sideright-banner"><h3>My league</h3><img src="images/my_league_img.jpg" width="180" height="83" alt="My League"><p class="b1"><a href="/login.asp" style="display:inline;margin-right:10px;">Login</a><span class="hdn">|</span><a href="/registration.asp" style="display:inline;">Register</a><span class="hdn">|</span></p><p class="b2"><a href="/content.asp?CategoryID=1829">Join the league</a><span class="hdn">|</span></p><p class="b3"><a href="/content.asp?CategoryID=1821"> Donate </a><span class="hdn">|</span></p><p class="b4"><a href="/products_types.asp"> Online Shop</a><span class="hdn">|</span></p></div>
+<div style="text-align:center"><p class="banner"><a href="/goto.asp?BannerID=67" onclick=""><img src="/uploads/banners/67.gif" alt="Tell us you support us - and we will keep you updated"></a></p></div><div style="text-align:center"><p class="banner"><a href="/goto.asp?BannerID=68" onclick=""><img src="/uploads/banners/68.gif" alt="Donate to the campaigns"></a></p></div><div style="text-align:center"><p class="banner"><a href="/goto.asp?BannerID=69" onclick=""><img src="/uploads/banners/69.gif" alt="Buy League merchandise"></a></p></div><div style="text-align:center"><p class="banner"><a href="/goto.asp?BannerID=70" onclick=""><img src="/uploads/banners/70.gif" alt="Take action against cruelty"></a></p></div><p class="banner"></p><p class="banner"></p><p class="banner"></p><p class="banner"></p>
 </div>
 
 <div id="content" class="s1">
@@ -155,7 +157,7 @@ with the Data Protection Act 1998.
 <br></h4>
 <p>If you are under 18, please get your parent/guardian's permission beforehand 
 whenever you provide personal information to this site. Users without this consent 
-are not allowed to provide us with personal information. </p></div></div><div id="page-tools"><ul><li id="tools-print"><a href="/article_print.asp?ArticleID=1950" onkeypress="" onclick="window.open(this.href,'print');return false;">Print version</a></li><li id="tools-send"><a href="/article_send.asp?ArticleID=1950" onkeypress="" onclick="window.open(this.href,'send','width=300,height=300,scrollbars=yes');return false;">Send page</a></li><li id="tools-feedback"><a href="/article_feedback.asp?ArticleID=1950" onkeypress="" onclick="window.open(this.href,'feed','width=450,height=400,scrollbars=yes');return false;">Feedback</a></li><li id="tools-bookmark"><a href="/bookmark_add.asp?ArticleID=1950" onkeypress="" onclick="window.open(this.href,'book','width=400,height=300,scrollbars=yes');return false;">Bookmark</a></li></ul></div></div>
+are not allowed to provide us with personal information. </p></div></div><div id="page-tools"><ul><li id="tools-print"><a href="/article_print.asp?ArticleID=1950" onkeypress="" onclick="window.open(this.href,'print');return false;">Print version</a></li><li id="tools-send"><a href="/article_send.asp?ArticleID=1950" onkeypress="" onclick="window.open(this.href,'send','width=300,height=300,scrollbars=yes');return false;">Send page</a></li></ul></div></div>
 </div>
 <div style="clear:both"></div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
@@ -164,7 +166,7 @@ are not allowed to provide us with personal information. </p></div></div><div id
 _uacct = "UA-2142857-1";
 urchinTracker();
 </script>
-<div class="clr"></div><div id="footer" class="s1"><p>Copyright © 2006 League Against Cruel Sports Ltd</p><div id="footer-links"><ul><li><a href="/content.asp?CategoryID=1622">Disclaimer</a><span class="hdn">|</span></li><li><a href="/content.asp?CategoryID=1621">Privacy policy </a><span class="hdn">|</span></li><li class="last"><a href="/content.asp?CategoryID=1867">Accessibility</a><span class="hdn">|</span></li></ul></div><div id="access-tools"><ul><li><a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww%2Eleague%2Eorg%2Euk"><img width="80" height="15" src="images/w3c/xhtml10.png" alt="XHTML 1.0"><span class="hdn">
+<div class="clr"></div><div id="footer" class="s1"><p>Copyright © 2006 League Against Cruel Sports</p><div id="footer-links"><ul><li><a href="/content.asp?CategoryID=1622">Disclaimer</a><span class="hdn">|</span></li><li><a href="/content.asp?CategoryID=1621">Privacy policy </a><span class="hdn">|</span></li><li class="last"><a href="/content.asp?CategoryID=1867">Accessibility</a><span class="hdn">|</span></li></ul></div><div id="access-tools"><ul><li><a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww%2Eleague%2Eorg%2Euk"><img width="80" height="15" src="images/w3c/xhtml10.png" alt="XHTML 1.0"><span class="hdn">
 								XHTML
 								1.0
 							</span></a></li><li><a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fwww%2Eleague%2Eorg%2Euk"><img width="80" height="15" src="images/w3c/css.png" alt="CSS"><span class="hdn">CSS</span></a></li></ul></div></div><div class="clr"></div>
