--- a/w/we/web/webyield.net.html
+++ b/w/we/web/webyield.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the webyield.net privacy policy that was archived on 2008-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080613064645id_/http%3A//www.webyield.net/privacystatement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webyield.net privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614005232id_/http%3A//webyield.net/privacystatement.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -16,43 +16,9 @@
   <tbody><tr>
     <td colspan="2"><table width="780" border="0" cellspacing="2" cellpadding="2">
   <tbody><tr>
-    <td width="192"><a href="http://www.webyield.net"><img src="/img/banner4.gif" alt="Webyield" width="130" height="80" border="0"></a></td>
-    <td width="574" align="left"><!-- SiteSearch Google -->
-<form method="get" action="http://www.webyield.net/searchengine.html" target="_top">
-  <table border="0" bgcolor="#ffffff">
-<tbody><tr><td nowrap="nowrap" valign="top" align="left" height="32">
-
-<br>
-<input type="hidden" name="domains" value="www.webyield.net">
-<label for="sbi" style="display: none">Enter your search terms</label>
-<input type="text" name="q" size="40" maxlength="255" value="" id="sbi">
-<label for="sbb" style="display: none">Submit search form</label>
-<input type="submit" name="sa" value="Google Search" id="sbb">
-</td></tr>
-<tr>
-<td nowrap="nowrap">
-<table>
-<tbody><tr>
-<td>
-<input type="radio" name="sitesearch" value="" checked="" id="ss0">
-<label for="ss0" title="Search the Web"><font size="-1" color="#000000">Web</font></label></td>
-<td>
-<input type="radio" name="sitesearch" value="www.webyield.net" id="ss1">
-<label for="ss1" title="Search www.webyield.net"><font size="-1" color="#000000">www.webyield.net</font></label></td>
-</tr>
-</tbody></table>
-<input type="hidden" name="client" value="pub-8386826294788545">
-<input type="hidden" name="forid" value="1">
-<input type="hidden" name="channel" value="3808032199">
-<input type="hidden" name="ie" value="ISO-8859-1">
-<input type="hidden" name="oe" value="ISO-8859-1">
-<input type="hidden" name="flav" value="0000">
-<input type="hidden" name="sig" value="TRNNs1MH66Zxqdb9">
-<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#336699;VLC:663399;AH:center;BGC:FFFFFF;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;FORID:11">
-<input type="hidden" name="hl" value="en">
-</td></tr></tbody></table>
-</form>
-<!-- SiteSearch Google --></td>
+    <td width="140"><a href="http://www.webyield.net"><img src="/img/banner4.gif" alt="Webyield" width="130" height="80" border="0"></a></td>
+    <td><a href="http://clickserve.cc-dt.com/link/tplclick?lid=41000000028007577&amp;pubid=21000000000070794"><img src="http://clickserve.cc-dt.com/link/tplimage?lid=41000000028007577&amp;pubid=21000000000070794" border="0" alt="$24.99/month* with no set-up fees! "></a>
+</td>
   </tr>
 </tbody></table>
 
@@ -93,72 +59,40 @@
 
 <p>&nbsp;</p>
 </blockquote> </td>
-    <td width="200" valign="top"> <p>&nbsp;</p><div class="shiftcontainer">
-<div class="shadowcontainer">
-<div class="innerdiv">
-<strong>SEO Tools</strong><br>
-<a href="/submit.html" class="m3">Search Engine Submission</a><br>
-<a href="/position.html" class="m3">Check Search Engine Position</a><br>
-<a href="/popularity.html" class="m3">Link Popularity Analysis</a><br>
-<a href="/keyword_analyzer.html" class="m3">Keyword Analyzer</a><br>
-<a href="/builder.html" class="m3">Web Page Optimizer</a><br>
-<a href="/metatags.html" class="m3">Meta Tag Generator</a><br>
-<a href="/robot_tags.html" class="m3">Robot Tag Generator</a><br>
-<a href="/keywordgenerator.html" class="m3">Keyword Generator</a><br>	
-<a href="/link_checker.html" class="m3">Web page Link Check</a><br>
-<a href="/domainquery.html">Ip Address tools</a>
+    <td width="200" valign="top"> <p>&nbsp;</p>    <div class="sdtop">SEO Tools     </div>
+	<div class="sidemenu">
+<ul>
+<li><a href="/submit.html" class="m3">Search Engine Submission</a></li>
+<li><a href="/position.html" class="m3">Check Search Engine Position</a></li>
+<li><a href="/popularity.html" class="m3">Link Popularity Analysis</a></li>
+<li><a href="/keyword_analyzer.html" class="m3">Keyword Analyzer</a></li>
+<li><a href="/builder.html" class="m3">Web Page Optimizer</a></li>
+<li><a href="/metatags.html" class="m3">Meta Tag Generator</a></li>
+<li><a href="/robot_tags.html" class="m3">Robot Tag Generator</a></li>
+<li><a href="/keywordgenerator.html" class="m3">Keyword Generator</a></li>
+<li><a href="/linkgenerator.html" class="m3">Link Generator</a></li>
+<li><a href="/link_checker.html" class="m3">Web page Link Check</a></li>
+<li><a href="/domainquery.html">Ip Address tools</a></li>
+</ul>
 </div>
+
+<br>
+
+
+
+<div class="sdtop">SEO Resources     </div>
+      <div class="sidemenu">
+<ul>
+<li><a href="/searchengine.html" class="m3">Search The Web</a></li>
+<li><a href="/news.html" class="m3">Search Engine News</a></li>
+<li><a href="/domainregister.html" class="m3"> Domain Name Registration</a></li>	
+<li><a href="/software.html" class="m3">SEO Software</a></li>
+<li><a href="http://webyield.net/topsites/index.html" class="m3">Top Sites by Language</a></li>
+<li><a href="/domain_wizard.html" class="m3">Domain Name Wizard</a></li>
+</ul>
 </div>
-</div>
+<br>
 
-
-<p>&nbsp;</p>
- <form style="margin:0px" method="post" action="https://www.securepaynet.net/gdshop/registrar/search.asp?prog%5Fid=webyield&amp;from=rhp" id="form1" name="form1">
-										<input type="hidden" name="checkAvail" value="1">
-										<input type="hidden" name="JScriptOn" value="yes">
-									<table border="0" cellspacing="2" cellpadding="2">
-  <tbody><tr>
-    <td>Register Domain with <strong>WebYield</strong> </td>
-  </tr>
-  <tr>
-    <td><input type="text" name="domainToCheck" maxlength="255" style="width:180x; font-size:13px; color:#000000;"></td>
-  </tr>
-  <tr>
-    <td><select name="TLD" style="font-size:13px; color:#000000;"><option value=".com">.com</option><option value=".org">.org</option><option value=".net">.net</option><option value=".mobi">.mobi</option><option value=".info">.info</option><option value=".us">.us</option><option value=".biz">.biz</option><option value=".tv">.tv</option><option value=".ws">.ws</option><option value=".name">.name</option><option value=".asia">.asia</option><option value=".at">.at</option><option value=".be">.be</option><option value=".cc">.cc</option><option value=".cn">.cn</option><option value=".com.cn">.com.cn</option><option value=".org.cn">.org.cn</option><option value=".net.cn">.net.cn</option><option value=".de">.de</option><option value=".eu">.eu</option><option value=".fm">.fm</option><option value=".jobs">.jobs</option><option value=".jp">.jp</option><option value=".ms">.ms</option><option value=".nu">.nu</option><option value=".co.nz">.co.nz</option><option value=".net.nz">.net.nz</option><option value=".org.nz">.org.nz</option><option value=".tc">.tc</option><option value=".tw">.tw</option><option value=".com.tw">.com.tw</option><option value=".org.tw">.org.tw</option><option value=".idv.tw">.idv.tw</option><option value=".co.uk">.co.uk</option><option value=".me.uk">.me.uk</option><option value=".org.uk">.org.uk</option><option value=".vg">.vg</option></select>
-											<input type="submit" value="Search" style="height:22px; font-size:12px; font-weight:bold" id="submit1" name="submit1">
-										</td>
-  </tr>
-  <tr>
-    <td><a href="/wydld.html">WebYield Domains</a></td>
-  </tr>
-</tbody></table>
-</form>
-
-
-
-
-
-
-
-<p>&nbsp;</p>
-
-<div class="shiftcontainer">
-<div class="shadowcontainer">
-<div class="innerdiv">
-<strong>SEO Resources</strong><br>
-<a href="/searchengine.html" class="m3">Search The Web</a><br>
-<a href="/news.html" class="m3">Search Engine News</a><br>
-<a href="/domainregister.html" class="m3"> Domain Name Registration</a><br>	
-<a href="/yahoo_sm.html" class="m3">Yahoo Sponsored Search</a><br>
-<a href="/software.html" class="m3">SEO Software</a><br>
-<a href="http://webyield.net/topsites/index.html" class="m3">Top Sites by Language</a><br>
-<a href="/domain_wizard.html" class="m3">Domain Name Wizard</a><br>
-
-
-
-</div>
-</div>
-</div>
 <p>&nbsp;</p>
 
 
@@ -166,8 +100,10 @@
   </tr>
   <tr>
     <td colspan="2">
-
-<p>&nbsp;</p><div align="center"><a href="/about.html"> About us </a>&nbsp;|&nbsp;
+<p>&nbsp;</p>
+<hr>
+<div align="center">
+<a href="/about.html"> About us </a>&nbsp;|&nbsp;
           <a href="/services.html"> Services </a>&nbsp;|&nbsp;
           <a href="/register.html"> Register </a>&nbsp;|&nbsp;	
           <a href="/login.html">Login </a>&nbsp;|&nbsp;
@@ -175,19 +111,61 @@
           <a href="/links.html"> Links </a>&nbsp;|&nbsp;
           <a href="/sitemap.html"> Site Map </a>&nbsp;|&nbsp;	
           <a href="http://www.webyield.net/index.html"> Home </a>&nbsp;|&nbsp;
-          <a href="/privacystatement.html"> Privacy Statement </a><br>
-      
-    </div>
-    <p align="center" class="m1">Copyright © 1998-2008  WebYield.net</p>
+          <a href="/privacystatement.html"> Privacy Statement </a>
+ </div>
+ 
+<hr>
+
+ 
+ <p></p><form action="http://www.webyield.net/searchengine.html" id="cse-search-box">
+
+    <input type="hidden" name="cx" value="partner-pub-8386826294788545:s8fxp8ly20g">
+    <input type="hidden" name="cof" value="FORID:11">
+    <input type="hidden" name="ie" value="ISO-8859-1">
+    <input type="text" name="q" size="35">
+    <input type="submit" name="sa" value="Search">
+  
+</form><p></p>
+<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
+ 
+ <table border="0" cellspacing="2" cellpadding="2" align="center">
+  <tbody><tr>
+    <td><script type="text/javascript">
+  addthis_url    = location.href;   
+  addthis_title  = document.title;  
+  addthis_pub    = 'webmasterunr';     
+</script>
+	 <script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script></td>
+    <td> 
+</td>
+    <td>&nbsp;</td>
+  </tr>
+</tbody></table>
+ 
+ 
+ 
+    <p align="center" class="m1">Copyright © 1998-2009  WebYield.net</p>
 	
+
+
+<script type="text/javascript">
+<!--
+	document.write('<img src="/cgi-bin/axs/ax.pl?trans.gif&ref=');
+	document.write(document.referrer);
+	document.write('" height="1" width="1" alt="" />');
+// -->
+</script><img src="/cgi-bin/axs/ax.pl?trans.gif&amp;ref=" height="1" width="1" alt=""><noscript>
+	<img src="/cgi-bin/axs/ax.pl?trans.gif" height="1" width="1" alt="" />
+</noscript>
+
+
+
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-361121-1";
 urchinTracker();
 </script>
-
-
 
 </td>
   </tr>
