--- a/k/ka/kar/karaokeparty.com.html
+++ b/k/ka/kar/karaokeparty.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the karaokeparty.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217015636id_/http%3A//www.karaokeparty.com/en/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the karaokeparty.com privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614024646id_/http%3A//www.karaokeparty.com/en/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -9,10 +9,10 @@
 <meta name="GOOGLEBOT" content="INDEX, FOLLOW">
 <link rel="shortcut icon" href="favicon.ico">
 <title>Karaokeparty.com - Free Online Karaoke Party Game</title>
-<script type="text/javascript" src="http://ussta.karaokeparty.com/js/jquery-1.2.6.pack.js"></script>
+<script type="text/javascript" src="http://ussta.karaokeparty.com/js/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="http://ussta.karaokeparty.com/js/swfobject.js"></script>
-<script type="text/javascript" src="http://ussta.karaokeparty.com/js/general.js?1144"></script>
-<link href="http://ussta.karaokeparty.com/css/style.css?1144" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="http://ussta.karaokeparty.com/js/general.js?580"></script>
+<link href="http://ussta.karaokeparty.com/css/style.css?580" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body>
@@ -44,24 +44,32 @@
 	    <div id="langpanel" class="toppanel">
 	      <div class="panel_contents"> </div>
 		  <div id="langpanelcontents">
-				<div class="langitem"><a href="/en/privacy" class="langitemlink">English<br><img src="http://ussta.karaokeparty.com/images/lang/english.png" alt="English" title="English"></a></div><div class="langitem"><a href="/fr/privacy" class="langitemlink">Français<br><img src="http://ussta.karaokeparty.com/images/lang/french.png" alt="Français" title="Français"></a></div><div class="langitem"><a href="/es/privacy" class="langitemlink">Español<br><img src="http://ussta.karaokeparty.com/images/lang/spanish.png" alt="Español" title="Español"></a></div><div class="langitem"><a href="/de/privacy" class="langitemlink">Deutsch<br><img src="http://ussta.karaokeparty.com/images/lang/german.png" alt="Deutsch" title="Deutsch"></a></div><div class="langitem"><a href="/it/privacy" class="langitemlink">Italiano<br><img src="http://ussta.karaokeparty.com/images/lang/italian.png" alt="Italiano" title="Italiano"></a></div><div class="langitem"><a href="/ja/privacy" class="langitemlink">日本語<br><img src="http://ussta.karaokeparty.com/images/lang/japanese.png" alt="日本語" title="日本語"></a></div><div class="langitem"><a href="/tr/privacy" class="langitemlink">Türkçe<br><img src="http://ussta.karaokeparty.com/images/lang/turkish.png" alt="Türkçe" title="Türkçe"></a></div><div class="langitem"><a href="/fi/privacy" class="langitemlink">Suomi<br><img src="http://ussta.karaokeparty.com/images/lang/finnish.png" alt="Suomi" title="Suomi"></a></div><div class="langitem"><a href="/sv/privacy" class="langitemlink">Svenska<br><img src="http://ussta.karaokeparty.com/images/lang/swedish.png" alt="Svenska" title="Svenska"></a></div>	      </div>
-	      <div id="closepanel"><a href="/languageselection" id="chooselanglink"><img src="http://ussta.karaokeparty.com/images/icons/close.png" alt="Close" title="Close"></a></div>
+				<div class="langitem"><a href="/en/privacy" class="langitemlink">English<br><img src="http://ussta.karaokeparty.com/images/lang/gb.png" alt="English" title="English"></a></div><div class="langitem"><a href="/fr/privacy" class="langitemlink">Français<br><img src="http://ussta.karaokeparty.com/images/lang/french.png" alt="Français" title="Français"></a></div><div class="langitem"><a href="/es/privacy" class="langitemlink">Español<br><img src="http://ussta.karaokeparty.com/images/lang/spanish.png" alt="Español" title="Español"></a></div><div class="langitem"><a href="/pt/privacy" class="langitemlink">Português<br><img src="http://ussta.karaokeparty.com/images/lang/portugal.png" alt="Português" title="Português"></a></div><div class="langitem"><a href="/de/privacy" class="langitemlink">Deutsch<br><img src="http://ussta.karaokeparty.com/images/lang/german.png" alt="Deutsch" title="Deutsch"></a></div><div class="langitem"><a href="/it/privacy" class="langitemlink">Italiano<br><img src="http://ussta.karaokeparty.com/images/lang/italian.png" alt="Italiano" title="Italiano"></a></div><div class="langitem"><a href="/tr/privacy" class="langitemlink">Türkçe<br><img src="http://ussta.karaokeparty.com/images/lang/turkish.png" alt="Türkçe" title="Türkçe"></a></div><div class="langitem"><a href="/da/privacy" class="langitemlink">Dansk<br><img src="http://ussta.karaokeparty.com/images/lang/danish.png" alt="Dansk" title="Dansk"></a></div><div class="langitem"><a href="/fi/privacy" class="langitemlink">Suomi<br><img src="http://ussta.karaokeparty.com/images/lang/finnish.png" alt="Suomi" title="Suomi"></a></div><div class="langitem"><a href="/sv/privacy" class="langitemlink">Svenska<br><img src="http://ussta.karaokeparty.com/images/lang/swedish.png" alt="Svenska" title="Svenska"></a></div>	      </div>
 	    </div>
 	</div>
 	
 	<div id="head">
 		<div id="headbox">
-			<div id="logo"><a href="/en/"><img src="http://ussta.karaokeparty.com/images/logo.png" alt="Karaoke Party" title="Karaoke Party"></a></div>
+			<div id="logo"><a href="/en/" target="_top"><img src="http://ussta.karaokeparty.com/images/logob.png" alt="Karaoke Party" title="Karaoke Party"></a></div>
             <div id="headmenu">
-                <div id="headerright">
-					<div id="logininfo">
-					<div class="floatleft"><a href="/en/invitefriends/">Invite friends</a></div><div class="floatleft">&nbsp;|&nbsp;<a href="/en/login" class="login_link">Log in</a>&nbsp;|&nbsp;<a href="/en/register">Register</a></div>					</div>
-                </div>
+				<div id="headerright">
+					<div class="topbar">
+											<div class="start">
+							<div class="end">
+								<div class="mid">
+								<a href="/en/login" class="login_link">Log in</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/en/register">Register</a>								</div>
+							</div>
+						</div>
+										</div>
+				</div>
+						
 				<div class="clearboth"></div>
 				<div id="headmenuflags">
-				<div class="headmenulang"><a href="/languageselection" id="languageslink">English<br><img class="floatright downarrow" src="http://ussta.karaokeparty.com/images/icons/downarrow.gif"><img src="http://ussta.karaokeparty.com/images/lang/english.png" class="currentlangflag" alt="English" title="English"></a></div>				</div>
+				<div class="headmenulang"><a href="/languageselection" id="languageslink">English<br><img class="floatright downarrow" src="http://ussta.karaokeparty.com/images/icons/downarrow.gif"><img src="http://ussta.karaokeparty.com/images/lang/gb.png" class="currentlangflag" alt="English" title="English"></a></div>				</div>
                 <div id="headmenulinks">
-				    <div class="headmenuitem"><a href="/en/" onmouseout="javascript:document.getElementById('home_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('home_icon').className='headmenuiconhover'">Home<br><img id="home_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/home.gif" alt="" title="Home"></a></div><div class="headmenuitem"><a href="/en/songs" onmouseout="javascript:document.getElementById('songs_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('songs_icon').className='headmenuiconhover'">Songs<br><img id="songs_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/songs.gif" alt="" title="Songs"></a></div><div class="headmenuitem"><a href="/en/community" onmouseout="javascript:document.getElementById('community_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('community_icon').className='headmenuiconhover'">Community<br><img id="community_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/community.gif" alt="" title="Community"></a></div><div class="headmenuitem"><a href="/en/mypage" onmouseout="javascript:document.getElementById('mypage_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('mypage_icon').className='headmenuiconhover'">&nbsp;My Page<br><img id="mypage_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/mypage.gif" alt="" title="&nbsp;My Page"></a></div><div class="headmenuitem"><a href="/en/friends" onmouseout="javascript:document.getElementById('friends_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('friends_icon').className='headmenuiconhover'">Friends<br><img id="friends_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/friends.gif" alt="" title="Friends"></a></div><div class="headmenuitem"><a href="/en/help" onmouseout="javascript:document.getElementById('help_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('help_icon').className='headmenuiconhover'">Help<br><img id="help_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/help.gif" alt="" title="Help"></a></div><div class="headmenuitem"><a href="/en/news" onmouseout="javascript:document.getElementById('news_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('news_icon').className='headmenuiconhover'">News<br><img id="news_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/news.gif" alt="" title="News"></a></div>                </div>
+				    <div class="headmenuitem"><a href="/en/" onmouseout="javascript:document.getElementById('home_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('home_icon').className='headmenuiconhover'" target="_top">Home<br><img id="home_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/home.gif" alt="" title="Home"></a></div><div class="headmenuitem"><a href="/en/songs" onmouseout="javascript:document.getElementById('songs_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('songs_icon').className='headmenuiconhover'" target="_top">Songs<br><img id="songs_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/songs.gif" alt="" title="Songs"></a></div><div class="headmenuitem"><a href="/en/community" onmouseout="javascript:document.getElementById('community_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('community_icon').className='headmenuiconhover'" target="_top">Community<br><img id="community_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/community.gif" alt="" title="Community"></a></div><div class="headmenuitem"><a href="/en/help" onmouseout="javascript:document.getElementById('help_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('help_icon').className='headmenuiconhover'" target="_top">Help<br><img id="help_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/help.gif" alt="" title="Help"></a></div><div class="headmenuitem"><a href="/en/news" onmouseout="javascript:document.getElementById('news_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('news_icon').className='headmenuiconhover'" target="_top">News<br><img id="news_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/news.gif" alt="" title="News"></a></div><div class="headmenuitem"><a href="/en/party" onmouseout="javascript:document.getElementById('party_icon').className ='headmenuicon'" onmouseover="javascript:document.getElementById('party_icon').className='headmenuiconhover'" target="_top">Partymode<br><img id="party_icon" class="headmenuicon" src="http://ussta.karaokeparty.com/images/icons/party.gif" alt="" title="Partymode"></a></div>                </div>
+				
+
 			</div>
 		</div>
 	</div>
@@ -73,7 +81,7 @@
 		</div>
 		<div id="center" class="leftcenter">
 	<div class="widebox">
-<h4>Privacy</h4><p>To use KaraokeParty you don’t have to register or give up any personal information. We explicitly ask for your personal information when we want it.
+<h1>Privacy</h1><p>To use KaraokeParty you don’t have to register or give up any personal information. We explicitly ask for your personal information when we want it.
 <br>
 <br>In order to register as a member at KaraokeParty you need to give us your email address, an alias, and age.
 <br>
@@ -97,16 +105,19 @@
 <br><strong>Cookie</strong>
 <br>We may place a text file called a "cookie" in the browser files of your computer. The cookie enables us to collect information about your visits to KaraokeParty. We may use this information to enhance your KaraokeParty experience and may share some information with our members, vendors, sponsors or others.
 <br>
-<br>You can turn off the cookie function in your web browser, then you won't be able to register as a member or log in. </p>	</div>
+<br>You can turn off the cookie function in your web browser, then you won't be able to register as a member or log in. 
+<br>
+<br><strong>Third Party Cookies</strong>
+<br>We use third-party advertising companies to serve ads when you visit our website. These companies may use information (not including your name, address, email address, or telephone number) about your visits to this and other websites in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and to know your choices about not having this information used by these companies, click <a href="http://www.google.com/privacy_ads.html">here</a>.</p>	</div>
 		</div>
 	</div>
 	<div class="clear"></div>
 	<div id="footbar">
 		<img src="http://ussta.karaokeparty.com/images/logo_small.gif">
-		<a href="/en/">English</a>&nbsp;|&nbsp;<a href="/fr/">Français</a>&nbsp;|&nbsp;<a href="/es/">Español</a>&nbsp;|&nbsp;<a href="/de/">Deutsch</a>&nbsp;|&nbsp;<a href="/it/">Italiano</a>&nbsp;|&nbsp;<a href="/ja/">日本語</a>&nbsp;|&nbsp;<a href="/tr/">Türkçe</a>&nbsp;|&nbsp;<a href="/fi/">Suomi</a>&nbsp;|&nbsp;<a href="/sv/">Svenska</a>	</div>
+		<a href="/en/">English</a>&nbsp;|&nbsp;<a href="/fr/">Français</a>&nbsp;|&nbsp;<a href="/es/">Español</a>&nbsp;|&nbsp;<a href="/pt/">Português</a>&nbsp;|&nbsp;<a href="/de/">Deutsch</a>&nbsp;|&nbsp;<a href="/it/">Italiano</a>&nbsp;|&nbsp;<a href="/tr/">Türkçe</a>&nbsp;|&nbsp;<a href="/da/">Dansk</a>&nbsp;|&nbsp;<a href="/fi/">Suomi</a>&nbsp;|&nbsp;<a href="/sv/">Svenska</a>	</div>
 	<div class="clear"></div>
 	<div id="footercopy">
-<p>Permission to distribute the music on this internet service has been granted by <a href="http://www.stim.se">STIM/NCB</a>.</p><p><a href="/en/about">About</a> | <a href="/en/terms">Terms of Use</a> | <a href="/en/code">Code of Conduct</a> | <a href="/en/privacy">Privacy</a> | <a href="/en/contact">Contact us</a> | <a href="/en/advertise">Advertising Inquiry</a> | <a href="/en/press">Press</a></p><p>A service from <a href="http://www.karaokeparty.com">KaraokeParty Online Gaming AB</a> © Copyright 2007-2008. All rights reserved.</p>		<br>
+<p>Permission to distribute the music on this internet service has been granted by <a href="http://www.stim.se" target="_top">STIM/NCB</a>.</p><p>All music on this site are cover versions made by professional musicans and not the original artist.<br>The names of the original artists are shown for informationals purposes only and does not depict the preforming musician.</p><p><a href="/en/about" target="_top">About</a> | <a href="/en/terms" target="_top">Terms of Use</a> | <a href="/en/code" target="_top">Code of Conduct</a> | <a href="/en/privacy" target="_top">Privacy</a> | <a href="/en/contact" target="_top">Contact us</a> | <a href="/en/advertise" target="_top">Advertising Inquiry</a> | <a href="/en/press" target="_top">Press</a> | <a href="/en/song_list" target="_top">All Songs</a> | <a href="/en/song_request_list" target="_top">Song request</a></p><p>A service from <a href="http://www.karaokeparty.com" target="_top">KaraokeParty Online Gaming AB</a> © Copyright 2007-2009. All rights reserved.</p>		<br>
 <a href="http://digg.com/submit?phase=2&amp;url=http://www.karaokeparty.com&amp;title=Online Karaoke with Scoring!"><img src="http://ussta.karaokeparty.com/images/share/digg.gif" alt="Digg this!" title="Digg this!"></a><a href="http://del.icio.us/post?url=http://www.karaokeparty.com&amp;title=Online Karaoke with Scoring!"><img src="http://ussta.karaokeparty.com/images/share/delicious.gif" alt="Add to del.icio.us" title="Add to del.icio.us"></a><a href="http://www.facebook.com/share.php?u=http://www.karaokeparty.com"><img src="http://ussta.karaokeparty.com/images/share/facebook.png" alt="Share on Facebook" title="Share on Facebook"></a><a href="http://technorati.com/faves/?add=http://www.karaokeparty.com"><img src="http://ussta.karaokeparty.com/images/share/technorati.gif" alt="Bookmark to Technorati" title="Bookmark to Technorati"></a><a href="http://slashdot.org/bookmark.pl?title=Online Karaoke with Scoring!&amp;url=http://www.karaokeparty.com"><img src="http://ussta.karaokeparty.com/images/share/slashd.png" alt="Bookmark to Slashdot!" title="Bookmark to Slashdot!"></a><a href="http://furl.net/storeIt.jsp?u=http://www.karaokeparty.com&amp;t=Online Karaoke with Scoring!"><img src="http://ussta.karaokeparty.com/images/share/furl.gif" alt="Furl this!" title="Furl this!"></a><a href="http://www.stumbleupon.com/submit?url=http://www.karaokeparty.com&amp;title=Online Karaoke with Scoring!"><img src="http://ussta.karaokeparty.com/images/share/stumbleit.png" alt="Stumble this" title="Stumble this"></a><a href="http://www.google.com/bookmarks/mark?op=add&amp;bkmk=http://www.karaokeparty.com&amp;title=Online Karaoke with Scoring!"><img src="http://ussta.karaokeparty.com/images/share/google.png" alt="Google Bookmarks" title="Google Bookmarks"></a><a href="http://www.myspace.com/Modules/PostTo/Pages/?u=http://www.karaokeparty.com&amp;t=Online Karaoke with Scoring!"><img src="http://ussta.karaokeparty.com/images/share/myspace.gif" alt="Share on Myspace" title="Share on Myspace"></a><a href="http://twitthis.com/twit?url=http://www.karaokeparty.com"><img src="http://ussta.karaokeparty.com/images/share/twitter.png" alt="Twit this!" title="Twit this!"></a>	</div>
 	<script type="text/javascript">
 		// <![CDATA[
@@ -134,4 +145,4 @@ var sc_security="e6f88c11";
 	
 
 
-<!-- Load time: 0.007s Lang:en Country:US G0 4.88--></body></html>
+<!-- Load time: 0.018s Lang:en Country:US G0 4.85--></body></html>
