--- a/r/ru/rud/rudolphtech.com.html
+++ b/r/ru/rud/rudolphtech.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rudolphtech.com privacy policy that was archived on 2008-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081219183309id_/http%3A//www.rudolphtech.com/PrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rudolphtech.com privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614092847id_/http%3A//rudolphtech.com/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	Rudolph : Privacy Policy
@@ -209,7 +209,7 @@
 
 <div id="footer" class="no_print">
     <div class="background">
-        <div class="padding"><span class="left">©2006 Rudolph Technologies, Inc.</span>&nbsp;&nbsp;&nbsp;<a id="ctl05_TermsLink" href="/TermsConditions.aspx">Terms &amp; Conditions</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a id="ctl05_PrivacyPolicyLink" href="/PrivacyPolicy.aspx">Privacy Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a id="ctl05_SiteMapLink" href="/SiteMap.aspx">Site Map</a></div>
+        <div class="padding"><span class="left">©2006-2009 Rudolph Technologies, Inc.</span>&nbsp;&nbsp;&nbsp;<a id="ctl05_TermsLink" href="/TermsConditions.aspx">Terms &amp; Conditions</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a id="ctl05_PrivacyPolicyLink" href="/PrivacyPolicy.aspx">Privacy Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a id="ctl05_SiteMapLink" href="/SiteMap.aspx">Site Map</a></div>
     </div>
 </div>
 		            </div>
