--- a/s/sw/swo/swoopo.co.uk.html
+++ b/s/sw/swo/swoopo.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the swoopo.co.uk privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216012626id_/http%3A//www.swoopo.co.uk/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the swoopo.co.uk privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614134244id_/http%3A//www.swoopo.co.uk/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
@@ -18,6 +18,7 @@
 <meta name="Language" content="english">
 <meta name="robots" content="index,follow">
 <meta name="revisit-after" content="3">
+<meta name="verify-v1" content="78CVQ8AQ7G839EJwCDqfBesV0vYpQwQUy8UlZ5gK++4=">
 <link rel="stylesheet" type="text/css" href="/layout.css?t=2">
 <link rel="stylesheet" media="all" type="text/css" href="/dd.css">
 <!--[if lte IE 6]>
@@ -25,11 +26,12 @@
 <![endif]-->
 <script src="/prototype.js" type="text/javascript"></script>
 <script src="/effects.js" type="text/javascript"></script>
-<script src="/counter.js?t=9" type="text/javascript"></script>
-<script src="/basic.js?t=9" type="text/javascript"></script>
+<script src="/counter.js?t=8" type="text/javascript"></script>
+<script src="/basic.js?t=8" type="text/javascript"></script>
 <script src="/pwd_strength.js" type="text/javascript"></script>
 </head>
 <body id="static" background="http://img2.swoopo.com/telebid-uk/img/hg_xmas.gif">
+<div id="olayer"></div>
 <center>
 <div id="totalwidth">
 
@@ -132,39 +134,39 @@
 
       <ul>
 
-  <li><a href="/brw/all-live-auctions_0.html?ast=1">All Live Auctions (354)</a></li>
+  <li><a href="/brw/all-live-auctions_0.html?ast=1">All Live Auctions (181)</a></li>
 
   <li><a href="/brw/coffee-espresso_57.html">&nbsp;&nbsp;&nbsp;Coffee &amp; Espresso (3)</a></li>
 
-  <li><a href="/brw/consoles-video-games_37.html">&nbsp;&nbsp;&nbsp;Consoles &amp; Video Games (132)</a></li>
+  <li><a href="/brw/consoles-video-games_37.html">&nbsp;&nbsp;&nbsp;Consoles &amp; Video Games (31)</a></li>
 
-  <li><a href="/brw/house-garden_53.html">&nbsp;&nbsp;&nbsp;House &amp; Garden (6)</a></li>
+  <li><a href="/brw/house-garden_53.html">&nbsp;&nbsp;&nbsp;House &amp; Garden (15)</a></li>
 
-  <li><a href="/brw/ipods-mp3-audio_55.html">&nbsp;&nbsp;&nbsp;iPods, MP3 &amp; Audio (13)</a></li>
+  <li><a href="/brw/ipods-mp3-audio_55.html">&nbsp;&nbsp;&nbsp;iPods, MP3 &amp; Audio (6)</a></li>
 
-  <li><a href="/brw/kids-games_59.html">&nbsp;&nbsp;&nbsp;Kids &amp; Games (7)</a></li>
+  <li><a href="/brw/kids-games_59.html">&nbsp;&nbsp;&nbsp;Kids &amp; Games (3)</a></li>
 
-  <li><a href="/brw/laptops-notebooks_50.html">&nbsp;&nbsp;&nbsp;Laptops &amp; Notebooks (21)</a></li>
+  <li><a href="/brw/laptops-notebooks_50.html">&nbsp;&nbsp;&nbsp;Laptops &amp; Notebooks (16)</a></li>
 
   <li><a href="/brw/lifestyle_43.html">&nbsp;&nbsp;&nbsp;Lifestyle (9)</a></li>
 
-  <li><a href="/brw/mobiles-telephones_52.html">&nbsp;&nbsp;&nbsp;Mobiles &amp; Telephones (14)</a></li>
+  <li><a href="/brw/mobiles-telephones_52.html">&nbsp;&nbsp;&nbsp;Mobiles &amp; Telephones (19)</a></li>
 
-  <li><a href="/brw/pcs-accessories_49.html">&nbsp;&nbsp;&nbsp;PCs &amp; Accessories (50)</a></li>
+  <li><a href="/brw/pcs-accessories_49.html">&nbsp;&nbsp;&nbsp;PCs &amp; Accessories (36)</a></li>
 
-  <li><a href="/brw/photography-camcorders_51.html">&nbsp;&nbsp;&nbsp;Photography &amp; Camcorders (12)</a></li>
+  <li><a href="/brw/photography-camcorders_51.html">&nbsp;&nbsp;&nbsp;Photography &amp; Camcorders (7)</a></li>
 
-  <li><a href="/brw/travel-navigation_48.html">&nbsp;&nbsp;&nbsp;Travel &amp; Navigation (8)</a></li>
+  <li><a href="/brw/travel-navigation_48.html">&nbsp;&nbsp;&nbsp;Travel &amp; Navigation (5)</a></li>
 
-  <li><a href="/brw/tv-video_54.html">&nbsp;&nbsp;&nbsp;TV &amp; Video (22)</a></li>
+  <li><a href="/brw/tv-video_54.html">&nbsp;&nbsp;&nbsp;TV &amp; Video (10)</a></li>
 
-  <li><a href="/brw/vouchers_58.html">&nbsp;&nbsp;&nbsp;Vouchers (37)</a></li>
+  <li><a href="/brw/vouchers_58.html">&nbsp;&nbsp;&nbsp;Vouchers (16)</a></li>
 
-  <li><a href="/brw/watches-jewellery_47.html">&nbsp;&nbsp;&nbsp;Watches &amp; Jewellery (20)</a></li>
+  <li><a href="/brw/watches-jewellery_47.html">&nbsp;&nbsp;&nbsp;Watches &amp; Jewellery (5)</a></li>
 
-  <li><a href="/brw/future-auctions_0.html?ast=2">Future Auctions (3190)</a></li>
+  <li><a href="/brw/future-auctions_0.html?ast=2">Future Auctions (1328)</a></li>
 
-  <li><a href="/brw/ended-auctions_0.html?ast=3">Ended Auctions (64238)</a></li>
+  <li><a href="/brw/ended-auctions_0.html?ast=3">Ended Auctions (104926)</a></li>
 
         <li id="ddf"><a></a></li>
       </ul>
@@ -220,6 +222,16 @@
   <!-- CONTENT AREA START -->
   <div id="content">
     
+<script language="javascript1.2" src="/eluminate.js" type="text/javascript"></script>
+                            <script language="javascript1.2" src="/cmdatatagutils.js" type="text/javascript"></script>
+<script language="javascript1.2" type="text/javascript">
+
+cmSetProduction();
+
+cmCreatePageviewTag("privacy","0");
+
+</script>
+
     <div class="contentbox_t">
       <div class="cb_header">Data Privacy</div>
     </div>
@@ -317,11 +329,13 @@
     urchinTracker( googleTrackingSite );
   }
 </script>
+<script src="https://www.dwin1.com/2383.js" type="text/javascript" defer="defer"></script>
 
 <script> var _l = 4377; var _p = 1440; var _f = 1; var _ta = (document.domain).split ("."); var psd = (_ta.length > 1 ? "." + _ta[_ta.length - 2] + "." + _ta[_ta.length - 1] : document.domain); var _cn = "L" + _l + "="; var _call = document.cookie.indexOf (_cn); var _il = 1; var _tl = 0; var _ex; var _rnd = (new Date ()).getTime (); if (_call >= 0) { _pos = document.cookie.substring (_call).indexOf (';'); if (_pos > 0) _val = document.cookie.substring (_call + _cn.length, _call + _pos); else _val = document.cookie.substring (_call + _cn.length); if (_val.indexOf ('.') > 0) { _il = _val.substring (0, _val.indexOf ('.')); _ex = _val.substring (_val.indexOf ('.') + 1); _tl = _ex - (new Date ()).getTime (); } if (_tl <= 0) document.cookie = _cn + ";domain=" + psd + ";path=/;expires=" + (new Date ((new Date ()).getTime () - 1000000)).toGMTString () + ";"; } if (_il < _f || _tl <= 0) { var expiry = (new Date((new Date()).getTime()+_p*2*60*1000)).toGMTString(); if (document.cookie.indexOf(_cn) < 0 ) document.cookie=_cn+''+(1)+'.'+((new Date()).getTime()+_p*60*1000)+';domain='+psd+';path=/;expires='+expiry; else document.cookie=_cn+''+(_il-0+1)+'.'+_ex+';domain='+psd+';path=/;expires='+expiry; document.write ("<img src='http://adopt.euroclick.com/Custom/bht.jsp?r=p&px=" + _l + "&v=1&rnd=" + _rnd + "' width=1 height=1 border=0>"); } </script>
 
 <!-- /TRACKING -->
 
+<!-- 4 -->
 
 
 </body></html>
