wholesaledir.com (archived on 2009-06-14)
{
  "alexa_rank": 107109,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 5540,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.14,
  "homepage_snapshot_redirected_domain": "wholesaledir.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090403033616id_/http://www.wholesaledir.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090403033616id_/http%3A//wholesaledir.com",
  "interval": "2009_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "wholesaledir.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090614230346id_/http%3A//www.wholesaledir.com/privacy_policy.html",
  "policy_title": "WHOLESALE DIRECTORY",
  "policy_url": "wholesaledir.com/privacy_policy.html",
  "sha1": "eddb3bef894dc719fc7b6cc222af2d42f066af94",
  "simhash": 5606408019206818648,
  "simhash_updated": false,
  "site_hostname": "wholesaledir.com",
  "site_url": "http://wholesaledir.com",
  "smog": 15.99,
  "strict_updated": false,
  "timestamp": "20090614230346",
  "word_count": 913,
  "year": 2009
}

--- a/w/wh/who/wholesaledir.com.html
+++ b/w/wh/who/wholesaledir.com.html
@@ -1,15 +1,13 @@
-<!--The following is the downloaded HTML source of the wholesaledir.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216052138id_/http%3A//www.wholesaledir.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wholesaledir.com privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614230346id_/http%3A//www.wholesaledir.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>WHOLESALE DIRECTORY</title>
-
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <link href="/includes/css/wholesalers.css" type="text/css" rel="stylesheet">
 <link rel="shortcut icon" href="favicon.ico">
 <meta name="description" content="Choose wholesale distributors of all types of wholesale products in out wholesale directory online">
 <meta name="keywords" content="wholewholesale, closeouts,liquidators,overstock,wholesalers,dropshippers,dropship,directory, online wholesale directory, wholesale directory, whole sale merchandise, wholesale merchandise, wholesale distributor, whole sale distributor, wholesale clothing, wholesale jewelry, wholesale furniture, wholesale distributor online, wholesalers, jewelry, clothing, product distributors, gifts, t- shirts, furniture, candles, merchandise catalog, dvd, watches, directory, lingerie, silver,  knives, clothes, apparel, leather, novelties, wholesale jewelry,wholesale flower,wholesale clothing,wholesale product,wholesale furniture,candle wholesale,wholesale bead,computer wholesale,wholesale distributor,wholesale t shirt,wholesale diamond,wholesale candy,wholesale fabric,bjs wholesale club,wholesale gift,wholesale dvd,wholesale merchandise,viagra,wholesale electronic,wholesale apparel,buy wholesale,wholesale car audio,wholesale supplier,wholesale computer part,wholesale catalog,wholesale lingerie,wholesale knife,wholesale body jewelry,sams wholesale club,wholesale shrink wrap,basket wholesale,wholesale casket,wholesale tool,cap wholesale,costco wholesale,wholesale toy,wholesale shoes,wholesale watch,wholesale carpet,wholesale craft supply,coral calcium wholesale,wholesale paintball,handbag wholesale,bj wholesale,wholesale balloon,wholesale gift wrap,wholesale gift wrap,wholesale sun glasses,wholesale lamp,wrapping paper wholesale,ribbon wholesale,import wholesale,silk flower wholesale,wholesale gift box,bag wholesale,wholesale book,lapel pin wholesale,wholesale company,wholesale picture fram,wholesale craft,silver jewelry wholesale,shirt wholesale,wholesale clothes,wholesale item,wholesale party supply,wholesale tire,wholesale video game,wholesale pen,swarovski crystal wholesale,wholesale gift bag,wholesale plastic bag,wholesale hat,wholesale pet supply,wholesale costume jewelry,baseball cap wholesale,mardi gras bead wholesale,wholesale source,wholesale cigarette,clothing company wholesale,bj wholesale club,jewelry box wholesale,wholesale cigar,jewelry wholesale online,wholesale glow stick,wholesale novelties,wholesale drop shipper,below wholesale,wig wholesale,wholesale perfume,wholesale software,wholesale shopping bag,wholesale dealer,wholesale auto part,cosco wholesale,wholesale food,wholesale cz jewelry,wholesale audio,wholesale sterling silver">
 </head>
-
 <body style="background-color: #FFFFFF" topmargin="0" leftmargin="0">
 <table height="683" cellspacing="0" cellpadding="0" align="center" border="0" width="724">
   <tbody>
@@ -19,7 +17,7 @@
         <tbody>
         <tr>
           <td width="240"><a href="/"><img src="http://b.wholesaledir.com/logo_animate.gif" border="0" align="left" width="240" height="68" alt="wholesale merchandise directory"></a></td>
-    		<td><a href="http://www.julie-ann.com/?affiliateid=10080" target="_blank" title="" alt=""><img alt="" border="0" src="/images/new_banners/1239_1.gif" width="230" height="60"></a><a href="http://www.rodenimports.com" target="_blank" title="" alt=""><img alt="" border="0" style="margin-left:8px;" src="/images/new_banners/1239_2.gif" width="230" height="60"></a>
+    		<td><a href="http://www.blvapparel.com" target="_blank" title="" alt=""><img alt="" border="0" src="/images/new_banners/1239_1.gif" width="230" height="60"></a><a href="http://www.gencomarketplace.com/?cid=BNR-WD-HP-SQ" target="_blank" title="" alt=""><img alt="" border="0" style="margin-left:8px;" src="/images/new_banners/1239_2.gif" width="230" height="60"></a>
 			</td></tr></tbody></table></td></tr>
   <tr>
     <td colspan="5" height="60" width="724">
@@ -283,7 +281,7 @@
 					</td>
 					<td width="2%" align="center"><font color="#548CAD"><b>|</b></font></td>
                     <td width="10%" align="center">
-						<b><a href="/links.html" style="text-decoration: none"><font color="#548CAD" onmouseover="style.color='black'" onmouseout="style.color='#548CAD'">links</font></a></b>
+						<b><a href="/resources.html" style="text-decoration: none"><font color="#548CAD" onmouseover="style.color='black'" onmouseout="style.color='#548CAD'">resources</font></a></b>
 					</td>
                     <td width="2%" align="center"><font color="#548CAD"><b>|</b></font></td>
                     <td width="18%" align="center">
@@ -293,7 +291,8 @@
                     <td width="14%" align="center">
                 		<b><a href="/sitemap.html" style="text-decoration: none"><font color="#548CAD" onmouseover="style.color='black'" onmouseout="style.color='#548CAD'">sitemap</font></a></b></td>
                   </tr>
-                </tbody></table>                </td>
+                </tbody></table>
+                </td>
               </tr>
               </tbody></table></td></tr></tbody></table></td>
     <td height="542" width="25"><img height="1" alt="" src="images/clear.gif" width="5" border="0"></td>
@@ -317,33 +316,18 @@
                     <tr>
                       <td width="100%">&nbsp;</td></tr>
                                 <tr>
-                      <td style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid" width="100%"><a href="http://www.julie-ann.com/?affiliateid=10080" target="_blank">
-                      <img border="0" src="http://b.wholesaledir.com/108.gif" width="100" height="90"></a></td></tr>
-                    <tr>
-                      <td width="100%">&nbsp;</td></tr>
-                                <tr>
-                      <td style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid" width="100%"><a href="http://www.silversource.com" target="_blank">
+                      <td style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid" width="100%"><a href="http://www.blvapparel.com" target="_blank">
                       <img border="0" src="http://b.wholesaledir.com/584.gif" width="100" height="90"></a></td></tr>
                     <tr>
                       <td width="100%">&nbsp;</td></tr>
                                 <tr>
-                      <td style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid" width="100%"><a href="http://www.rodenimports.com" target="_blank">
+                      <td style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid" width="100%"><a href="http://www.julie-ann.com/?affiliateid=10080" target="_blank">
                       <img border="0" src="http://b.wholesaledir.com/297.gif" width="100" height="90"></a></td></tr>
                     <tr>
                       <td width="100%">&nbsp;</td></tr>
                                 <tr>
                       <td style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid" width="100%"><a href="http://www.lightinthebox.com?litb=20002" target="_blank">
                       <img border="0" src="http://b.wholesaledir.com/359.gif" width="100" height="90"></a></td></tr>
-                    <tr>
-                      <td width="100%">&nbsp;</td></tr>
-                                <tr>
-                      <td style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid" width="100%"><a href="http://secure.bidz.com/main/default.asp?promoid=wholesaledir30&amp;url=http://www.bidz.com" target="_blank">
-                      <img border="0" src="http://b.wholesaledir.com/413.gif" width="100" height="90"></a></td></tr>
-                    <tr>
-                      <td width="100%">&nbsp;</td></tr>
-                                <tr>
-                      <td style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid" width="100%"><a href="http://www.mofeier.com" target="_blank">
-                      <img border="0" src="http://b.wholesaledir.com/553.gif" width="100" height="90"></a></td></tr>
                     <tr>
                       <td width="100%">&nbsp;</td></tr>
                                 <tr>
@@ -357,13 +341,8 @@
                     <tr>
                       <td width="100%">&nbsp;</td></tr>
                                 <tr>
-                      <td style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid" width="100%"><a href="http://www.merchandiseusa.com" target="_blank">
-                      <img border="0" src="http://b.wholesaledir.com/656.gif" width="100" height="90"></a></td></tr>
-                    <tr>
-                      <td width="100%">&nbsp;</td></tr>
-                                <tr>
                       <td style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid" width="100%"><a href="/member.html" target="_blank">
-                      <img border="0" src="http://b.wholesaledir.com/advertise_here11.jpg" width="100" height="90"></a></td></tr>
+                      <img border="0" src="http://b.wholesaledir.com/advertise_here7.jpg" width="100" height="90"></a></td></tr>
                     <tr>
                       <td width="100%">&nbsp;</td></tr>
                                 <tr>
