bb-elec.com (archived on 2009-06-15)
{
  "alexa_rank": 218512,
  "analysis_subcorpus": true,
  "categories": "business;education;shopping",
  "char_count": 7496,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.79,
  "homepage_snapshot_redirected_domain": "bb-elec.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090402115109id_/http://www.bb-elec.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090402115109id_/http%3A//bb-elec.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "bb-elec.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090615000524id_/http%3A//www.bb-elec.com/privacy.asp",
  "policy_title": "B&B Electronics: RS485, RS232, RS422, Ethernet, USB",
  "policy_url": "bb-elec.com/privacy.asp",
  "sha1": "55975ac9b7bb2ae4521d28fb5ba6bc82ed1034d7",
  "simhash": 13909494833084845150,
  "simhash_updated": false,
  "site_hostname": "bb-elec.com",
  "site_url": "http://bb-elec.com",
  "smog": 13.24,
  "strict_updated": false,
  "timestamp": "20090615000524",
  "word_count": 1242,
  "year": 2009
}

--- a/b/bb/bb-/bb-elec.com.html
+++ b/b/bb/bb-/bb-elec.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bb-elec.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216044908id_/http%3A//bb-elec.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bb-elec.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615000524id_/http%3A//www.bb-elec.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- InstanceBegin template="Templates/about.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" --> 
@@ -235,27 +235,6 @@ a:active {
 -->
 </style>
 
-<!--Start Kampyle Exit-Popup Code--> 
-<script type="text/javascript">
-var k_push_vars = {
-	"view_percentage": 30,
-	"popup_font_color": "#000000",
-	"popup_background": "#D4E2F0",
-	"header": "Your feedback is important to us!",
-	"question": "Would you be willing to give us a short (1 minute) feedback?",
-	"footer": "Thank you for helping us improve our website",
-	"yes": "Yes",
-	"no": "No",
-	"text_direction": "ltr",
-	"images_dir": "http://cf.kampyle.com/",
-	"yes_background": "#76AC78",
-	"no_background": "#8D9B86",
-	"site_code": 4115316
-}
-</script>
-<script type="text/javascript" src="http://cf.kampyle.com/k_push.js"></script>
-<!--End Kampyle Exit-Popup Code-->
-
 <!-- Start Kampyle Css -->
 <link rel="stylesheet" type="text/css" media="screen" href="http://cf.kampyle.com/k_button.css">
 <!-- End Kampyle Css -->
@@ -370,39 +349,36 @@ var s_code=s.t();if(s_code)document.write(s_code)//--></script>
 <!-- End SiteCatalyst code version: H.15.1. -->
 
 <!--Start Kampyle Feedback Form Button-->
-<div id="k_close_button" class="k_float kc_bottom kc_right"></div><div><a href="http://www.kampyle.com/feedback_form/ff-feedback-form.php?site_code=4115316&amp;form_id=9051&amp;lang=en" target="kampyleWindow" id="kampylink" class="k_float k_bottom k_right" onclick="javascript:k_button.open_ff();return false;"><img src="http://cf.kampyle.com/en-orange-corner-low-right.gif" alt="Feedback Form"></a></div>
+<div id="k_close_button" class="k_float kc_bottom kc_right"></div><div><a href="http://www.kampyle.com" target="kampyleWindow" id="kampylink" class="k_float k_bottom k_right" onclick="javascript:k_button.open_ff('site_code=4115316&amp;form_id=9156&amp;lang=en');return false;"><img src="http://cf.kampyle.com/en-orange-corner-low-right.gif" alt="Feedback Form"></a></div>
 <script src="http://cf.kampyle.com/k_button.js" type="text/javascript"></script>
 <!--End Kampyle Feedback Form Button-->
 
 <table width="760" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr><td><table width="100%" border="0" cellpadding="0" cellspacing="0">
-  <tbody><tr align="left" valign="top">
-    <td width="274" valign="middle" bgcolor="#FFFFFF"><a href="../welcome.asp" name="&amp;lid=Logo" id="&amp;lid=Logo"><img src="../images/bbelec_logo.gif" alt="B&amp;B Electronics Manufacturing Company" width="274" height="49" border="0" align="left"></a></td>
-    <td width="204" align="center" valign="top"><div align="left"><a href="https://secure.bb-elec.com/EnterprisePortal/" onmouseover="MM_swapImage('ImageAcct','','../images/accountinfo_on.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="../images/accountinfo.jpg" alt="Log In for Account Information" name="ImageAcct" width="100" height="33" border="0" align="top" id="ImageAcct"></a><a href="https://secure.bb-elec.com/EnterprisePortal/" onmouseover="MM_swapImage('Image11','','../images/shoppingcart_on.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="../images/shoppingcart.jpg" alt="Shopping Cart" name="Image11" width="104" height="33" border="0" align="top" id="Image11"><br>
-              <span class="style_links2"><img src="../images/spacer.gif" width="8" height="13" border="0" align="bottom"></span></a><span class="style_links2"><img src="../images/spacer.gif" width="1" height="1">Buy online or call 815-433-5100</span></div></td>
-    <form method="get" action="http://search.bb-elec.com/" name="searchform" id="searchform" style="margin-bottom:10px;"></form>
-      <td width="5" align="center" valign="bottom"><a href="www.bb-europe.com" class="style_smgraylinks"><img src="../.images/spacer.gif" width="5" height="5" border="0"></a></td>
-      <td width="136" align="center" valign="top"><div align="left">
-        <input name="q" id="q" value="Search" size="18" onfocus="doClear(this)"><div id="autocomplete"></div>
-        <span class="style_links3">Enter keywords, product, or model # </span></div>
-		<script type="text/javascript" src="http://content.atomz.com/content/pb00/00/36/5d/publish/assets/autocomplete/autocompletelist.js"></script>
-		</td>
-      <td width="138" valign="top"><table border="0" cellpadding="0">
-        <tbody><tr>
-          <td align="left" valign="top"><input name="Image10" type="image" id="Image10" onmouseover="MM_swapImage('Image10','','images/search_on.gif',1)" onmouseout="MM_swapImgRestore()" src="../images/search_arrow.gif" alt="Search" align="top" width="18" height="18" border="0">          </td>
-          <td valign="bottom"><img src="images/spacer.gif" width="5" height="5" border="0"></td>
-          <td valign="top"><p align="center" class="style_smdate">December&nbsp;15, 2008</p></td>
-        </tr>
-        <tr>
-          <td align="left" valign="top"></td>
-          <td align="left" valign="top"></td>
-          <td align="left" valign="top"><a href="http://www.bb-europe.com/" class="style_smgraylinks">European Customers<br>
-            Click here </a></td>
-        </tr>
-      </tbody></table></td>
-    
+        <tbody><tr align="left" valign="top">
+          <td width="220" height="49" valign="bottom" bgcolor="#FFFFFF"><a href="welcome.asp" name="&amp;lid=Logo" id="&amp;lid=Logo">
+            <img src="/images/hnew/bblogo.gif" alt="B&amp;B Electronics Manufacturing Company" width="220" height="49" border="0" align="left">
+          </a></td>
+          <td width="252" align="left" valign="bottom"><img src="/images/hnew/tagline.gif" alt="Connecting Your Industrial World - Simply and Reliably" width="252" height="49"></td>
+
+          <td width="687" valign="top">
+
+		  <table width="100%" border="0" cellpadding="0" cellspacing="0">
+<tbody><tr>
+                  <td align="right" valign="bottom" style="padding-bottom:10px;"><a href="https://secure.bb-elec.com/EnterprisePortal/">My Account</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="https://secure.bb-elec.com/EnterprisePortal/">Shopping Cart</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.bb-electronics.com">International</a></td>
+                </tr>
+                <tr>
+                  <td align="right" valign="bottom">
+                  <div align="right">
+            <form method="get" action="http://search.bb-elec.com/" name="searchform" id="searchform" style="margin-bottom:10px;"><input name="s" id="s" type="hidden" value="">
+
+               <input name="q" id="q" value="Search" size="25" onfocus="doClear(this)"><input name="Image10" type="image" id="Image10" onmouseover="MM_swapImage('Image10','','images/search_on.gif',1)" onmouseout="MM_swapImgRestore()" src="images/search_arrow.gif" alt="Search" align="top" width="18" height="18" border="0">
+                <div id="autocomplete"></div></form></div>
+              <script type="text/javascript" src="http://content.atomz.com/content/pb00/00/36/5d/publish/assets/autocomplete/autocompletelist.js"></script></td>
+                </tr>
+          </tbody></table></td>
   </tr>
-</tbody></table>
+      </tbody></table>
 
 </td><td></td></tr>
   <tr><td><table width="100%" border="0" cellspacing="0" cellpadding="0">
